--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,17 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
+body {
+  background-color: #2b313c;
+}
+/* .App {
+  
+} */
+
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+.App-link {
+  color: #61dafb;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -24,9 +31,6 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -35,4 +39,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
