--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
 body {
   background-color: #2b313c;
+  font-family: 'Raleway', sans-serif;
+  font-size: 16px;
+}
+
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgba(52, 44, 44, 0.379);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #666;
+  border-radius: 10px;
 }
